--- a/WPD-API.cabal
+++ b/WPD-API.cabal
@@ -77,4 +77,4 @@ executable WPD-API
     default-language: Haskell2010
 
     -- Dependencies
-    build-depends: base >=4.7 && <5, scotty
+    build-depends: base >=4.7 && <5, scotty, http-conduit, req, aeson, text, bytestring, time, http-types, http-client, directory, http-client-tls
